fix image on mobile devices being shown

--- a/style.css
+++ b/style.css
@@ -181,7 +181,6 @@ button {
 
   #gifContainer {
       width: 100%;
-      display: flex;
       flex-direction: column;
       align-items: center;
   }
